--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,6 +17,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
